Add full Lab2 task